# dosify

./: .env.example  .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
.github/workflows/: deploy.yml
assets/cad_models/: pill.stl
config/: medications.yaml  poses.yaml  robot_config.yaml
launch/: demo.launch  dosify.launch
ocr/: README.md  dosify_README.md  dosify_requirements.txt  ocr_processor.py  output.json
scripts/: demo_dispense.py  dispense_node.py  dosify-autostart.sh  dosify-restart.sh  dosify.sh  install_autostart.sh  print_patient_week.py  refresh_pkg.sh  robot_control_node.py  setup.sh
src/dosify/: medications.py  patient_poses.py  poses_loader.py  prescription_scan.py  robot_arm.py
systemd/: dosify.service
