<?xml version="1.0"?>
<package format="2">
  <name>dosify</name>
  <version>0.1.0</version>
  <description>Automated pill dispensing system for Niryo Ned 2 robot</description>
  <maintainer email="angebelard@gmail.com">Belix</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>niryo_robot_msgs</build_depend>
  <build_depend>niryo_robot_arm_commander</build_depend>
  <build_depend>niryo_robot_poses_handlers</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>niryo_robot_msgs</exec_depend>
  <exec_depend>niryo_robot_arm_commander</exec_depend>
  <exec_depend>niryo_robot_poses_handlers</exec_depend>
</package>
